--- a/index.html
+++ b/index.html
@@ -9,23 +9,21 @@
 <body>
     <div class="container">
         <h1>Sunrise and Sunset Times</h1>
-        <form action="/" method="post">
-            <label for="location">Select a City or State:</label>
-            <select name="location" id="location">
-                <option value="34.05223,-118.24368" {% if location == "34.05223,-118.24368" %} selected {% endif %}>Los Angeles (CA)</option>
-                <option value="33.53865,-112.18599" {% if location == "33.53865,-112.18599" %} selected {% endif %}>Glendale (AZ)</option>
-                <option value="32.78306,-96.80667" {% if location == "32.78306,-96.80667" %} selected {% endif %}>Dallas (TX)</option>
-                <option value="40.71427,-74.00597" {% if location == "40.71427,-74.00597" %} selected {% endif %}>New York City (NY)</option>
-                <option value="38.89511,-77.03637" {% if location == "338.89511,-77.03637" %} selected {% endif %}>Washington D.C. (DC)</option>
-            </select>
-            <input type="submit" value="Get Sunrise and Sunset Times">
-        </form>
+        <label for="location">Select a City or State:</label>
+        <select name="location" id="location">
+            <option value="34.052235,-118.243683">Los Angeles (CA)</option>
+            <option value="33.53865,-112.18599">Glendale (AZ)</option>
+            <option value="32.776665,-96.796989">Dallas (TX)</option>
+            <option value="40.71427,-74.00597">New York City (NY)</option>
+            <option value="38.89511,-77.03637">Washington D.C. (DC)</option>
+        </select>
+        <input type="button" value="Get Sunrise and Sunset Times" onclick="getSunriseSunset()">
         <br>
-        {% if sunrise and sunset %}
-            <p><span class="sunrise">Sunrise:</span> {{ sunrise }}</p>
-            <p><span class="sunset">Sunset:</span> {{ sunset }}</p>
-        {% endif %}
+        <p><span class="sunrise">Sunrise:</span> <span id="sunriseText"></span></p>
+        <p><span class="sunset">Sunset:</span> <span id="sunsetText"></span></p>
     </div>
-    <p class="powered-by"><a href="https://sunrisesunset.io" target="_blank">Powered by SunriseSunset.io</a></p>
+    <p class="powered-by">Powered by <a href="https://sunrisesunset.io" target="_blank">SunriseSunset.io</a></p>
+
+    <script src="script.js"></script>
 </body>
 </html>
