--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sunrise and Sunset Times</title>
-    <link rel="stylesheet" href="{{ url_for(filename='styles.css') }}">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -22,7 +22,6 @@
         <p><span class="sunrise">Sunrise:</span> <span id="sunriseText"></span></p>
         <p><span class="sunset">Sunset:</span> <span id="sunsetText"></span></p>
     </div>
-    <p class="powered-by">Powered by <a href="https://sunrisesunset.io" target="_blank">SunriseSunset.io</a></p>
 
     <script src="script.js"></script>
 </body>
