--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <option value="40.71427,-74.00597">New York City (NY)</option>
             <option value="38.89511,-77.03637">Washington D.C. (DC)</option>
         </select>
-        <input type="button" value="Get Sunrise and Sunset Times" onclick="getSunriseSunset()">
+        <input class="submit" type="button" value="Get Sunrise and Sunset Times" onclick="getSunriseSunset()">
         <br>
         <p><span class="sunrise">Sunrise:</span> <span id="sunriseText"></span></p>
         <p><span class="sunset">Sunset:</span> <span id="sunsetText"></span></p>
