--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p><span class="sunrise">Sunrise:</span> <span id="sunriseText"></span></p>
         <p><span class="sunset">Sunset:</span> <span id="sunsetText"></span></p>
     </div>
-
+    <p class="powered-by"><a href="https://sunrisesunset.io" target="_blank">Powered by SunriseSunset.io</a></p>
     <script src="script.js"></script>
 </body>
 </html>
