--- a/index.html
+++ b/index.html
@@ -9,57 +9,57 @@
 <body>
     <div class="container">
         <h1>Sunrise and Sunset Times</h1>
-        <label for="location">Select a City or State:</label>
+        <label for="location">Select a State Capitol:</label>
         <select name="location" id="location">
-            <option value="32.361538,-86.279118">Montgomery (AL)</option>
-            <option value="58.301935,-134.419740">Juneau (AK)</option>
-            <option value="33.448457,-112.073844">Phoenix (AZ)</option>
-            <option value="38.5767,-121.4934">Sacramento (CA)</option>
-            <option value="39.7391667,-104.984167">Denver (CO)</option>
-            <option value="41.767,-72.677">Hartford (CT)</option>
-            <option value="39.16192,-75.526755">Dover (DE)</option>
-            <option value="30.4518,-84.27277">Tallahassee (FL)</option>
-            <option value="33.76,-84.39">Atlanta (GA)</option>
-            <option value="21.30895,-157.826182">Honolulu (HI)</option>
-            <option value="43.613739,-116.237651">Boise (ID)</option>
-            <option value="39.783250,-89.650373">Springfield (IL)</option>
-            <option value="39.790942,-86.147685">Indianapolis (IN)</option>
-            <option value="41.590939,-93.620866">Des Moines (IA)</option>
-            <option value="39.04,-95.69">Topeka (KS)</option>
-            <option value="38.197274,-84.86311">Frankfort (KY)</option>
-            <option value="30.45809,-91.140229">Baton Rouge (LA)</option>
-            <option value="44.323535,-69.765261">Augusta (ME)</option>
-            <option value="38.9784,-76.491499">Annapolis (MD)</option>
-            <option value="42.3601,-71.0589">Boston (MA)</option>
-            <option value="42.7335,-84.5467">Lansing (MI)</option>
-            <option value="44.955097,-93.102211">St. Paul (MN)</option>
-            <option value="32.298756,-90.18481">Jackson (MS)</option>
-            <option value="38.579065,-92.172932">Jefferson City (MO)</option>
-            <option value="46.595805,-112.027031">Helena (MT)</option>
-            <option value="40.809868,-96.675345">Lincoln (NE)</option>
-            <option value="39.160949,-119.753877">Carson City (NV)</option>
-            <option value="43.220093,-71.549127">Concord (NH)</option>
-            <option value="40.221741,-74.756138">Trenton (NJ)</option>
-            <option value="35.68224,-105.939728">Santa Fe (NM)</option>
-            <option value="42.651,-73.755">Albany (NY)</option>
-            <option value="35.787743,-78.644257">Raleigh (NC)</option>
-            <option value="48.813343,-100.777222">Bismarck (ND)</option>
-            <option value="39.962245,-83.000647">Columbus (OH)</option>
-            <option value="35.482309,-97.534994">Oklahoma City (OK)</option>
-            <option value="44.931109,-123.029159">Salem (OR)</option>
-            <option value="40.269789,-76.875613">Harrisburg (PA)</option>
-            <option value="41.82355,-71.422132">Providence (RI)</option>
-            <option value="34.000,-81.035">Columbia (SC)</option>
-            <option value="44.366,-100.336">Pierre (SD)</option>
-            <option value="36.165,-86.784">Nashville (TN)</option>
-            <option value="30.266667,-97.75">Austin (TX)</option>
-            <option value="40.7547,-111.892622">Salt Lake City (UT)</option>
-            <option value="44.26639,-72.57194">Montpelier (VT)</option>
-            <option value="37.54,-77.46">Richmond (VA)</option>
-            <option value="47.042418,-122.893077">Olympia (WA)</option>
-            <option value="38.349497,-81.633294">Charleston (WV)</option>
-            <option value="43.074722,-89.384444">Madison (WI)</option>
-            <option value="41.145548,-104.802042">Cheyenne (WY)</option>            
+            <option value="32.36681,-86.29997">Montgomery (AL)</option>
+            <option value="58.30194,-134.41972">Juneau (AK)</option>
+            <option value="33.44838,-112.07404">Phoenix (AZ)</option>
+            <option value="38.58157,-121.4944">Sacramento (CA)</option>
+            <option value="39.73915,-104.9847">Denver (CO)</option>
+            <option value="441.76371,-72.68509">Hartford (CT)</option>
+            <option value="41.76371,-72.68509">Dover (DE)</option>
+            <option value="30.43826,-84.28073">Tallahassee (FL)</option>
+            <option value="33.749,-84.38798">Atlanta (GA)</option>
+            <option value="21.30694,-157.85833">Honolulu (HI)</option>
+            <option value="43.6135,-116.20345">Boise (ID)</option>
+            <option value="39.80172,-89.64371">Springfield (IL)</option>
+            <option value="39.76838,-86.15804">Indianapolis (IN)</option>
+            <option value="41.60054,-93.60911">Des Moines (IA)</option>
+            <option value="39.04833,-95.67804">Topeka (KS)</option>
+            <option value="38.20091,-84.87328">Frankfort (KY)</option>
+            <option value="30.44332,-91.18747">Baton Rouge (LA)</option>
+            <option value="33.47097,-81.97484">Augusta (ME)</option>
+            <option value="38.97845,-76.49218">Annapolis (MD)</option>
+            <option value="42.35843,-71.05977">Boston (MA)</option>
+            <option value="42.73253,-84.55553">Lansing (MI)</option>
+            <option value="44.94441,-93.09327">St. Paul (MN)</option>
+            <option value="30.33218,-81.65565">Jackson (MS)</option>
+            <option value="38.5767,-92.17352">Jefferson City (MO)</option>
+            <option value="46.59271,-112.03611">Helena (MT)</option>
+            <option value="40.8,-96.66696">Lincoln (NE)</option>
+            <option value="39.1638,-119.7674">Carson City (NV)</option>
+            <option value="43.20814,-71.53757">Concord (NH)</option>
+            <option value="40.21705,-74.74294">Trenton (NJ)</option>
+            <option value="35.68698,-105.9378">Santa Fe (NM)</option>
+            <option value="42.65258,-73.75623">Albany (NY)</option>
+            <option value="35.7721,-78.63861">Raleigh (NC)</option>
+            <option value="46.80833,-100.78374">Bismarck (ND)</option>
+            <option value="39.96118,-82.99879">Columbus (OH)</option>
+            <option value="35.46756,-97.51643">Oklahoma City (OK)</option>
+            <option value="44.9429,-123.0351">Salem (OR)</option>
+            <option value="40.2737,-76.88442">Harrisburg (PA)</option>
+            <option value="41.82399,-71.41283">Providence (RI)</option>
+            <option value="34.00071,-81.03481">Columbia (SC)</option>
+            <option value="44.36832,-100.35097">Pierre (SD)</option>
+            <option value="36.16589,-86.78444">Nashville (TN)</option>
+            <option value="30.26715,-97.74306">Austin (TX)</option>
+            <option value="40.76078,-111.89105">Salt Lake City (UT)</option>
+            <option value="44.26006,-72.57539">Montpelier (VT)</option>
+            <option value="37.55376,-77.46026">Richmond (VA)</option>
+            <option value="47.03787,-122.9007">Olympia (WA)</option>
+            <option value="38.34982,-81.63262">Charleston (WV)</option>
+            <option value="43.07305,-89.40123">Madison (WI)</option>
+            <option value="41.13998,-104.82025">Cheyenne (WY)</option>
         </select>
         <input class="submit" type="button" value="Get Sunrise and Sunset Times" onclick="getSunriseSunset()">
         <br>
