--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <div class="container">
         <h1>Sunrise and Sunset Times</h1>
-        <label for="location">Select a State Capitol:</label>
+        <div class="title">
+            <label for="location">Select a State Capitol:</label>
+        </div>
         <select name="location" id="location">
             <option value="32.36681,-86.29997">Montgomery (AL)</option>
             <option value="58.30194,-134.41972">Juneau (AK)</option>
