--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
         <p><span class="sunset">Sunset:</span> <span id="sunsetText"></span></p>
     </div>
     <div class="footer">
-        <p class="api-link"><a href="https://sunrisesunset.io" target="_blank">Powered by SunriseSunset.io</a></p>
-        <p class="created-by">Created by Dominic Rucker for SES141</p>
-    </div>
+        <p><a href="https://sunrisesunset.io" target="_blank">Powered by SunriseSunset.io</a></p>
+        <p>Created by Dominic Rucker for SES141</p>
+    </div>  
     <!-- Link to external JavaScript file -->
     <script src="script.js"></script>
 </body>
