--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
         <p><span class="sunrise">Sunrise:</span> <span id="sunriseText"></span></p>
         <p><span class="sunset">Sunset:</span> <span id="sunsetText"></span></p>
     </div>
-    <div class="footer">
-        <p><a href="https://sunrisesunset.io" target="_blank">Powered by SunriseSunset.io</a></p>
-        <p>Created by Dominic Rucker for SES141</p>
-    </div>  
+    <!-- Link to external API -->
+    <p class="api-link"><a href="https://sunrisesunset.io" target="_blank">Powered by SunriseSunset.io</a></p>
+    <!-- Credits -->
+    <p class="created-by">Created by Dominic Rucker for SES141</p>
     <!-- Link to external JavaScript file -->
     <script src="script.js"></script>
 </body>
