--- a/index.html
+++ b/index.html
@@ -78,10 +78,13 @@
         <p><span class="sunrise">Sunrise:</span> <span id="sunriseText"></span></p>
         <p><span class="sunset">Sunset:</span> <span id="sunsetText"></span></p>
     </div>
-    <!-- Link to external API -->
-    <p class="api-link"><a href="https://sunrisesunset.io" target="_blank">Powered by SunriseSunset.io</a></p>
-    <!-- Credits -->
-    <p class="created-by">Created by Dominic Rucker for SES141</p>
+    <!-- Credits container -->
+    <div class="credits-container">
+        <!-- API Link -->
+        <p class="api-link"><a href="https://sunrisesunset.io" target="_blank">Powered by SunriseSunset.io</a></p>
+        <!-- Created by -->
+        <p class="created-by">Created by Dominic Rucker for SES141</p>
+    </div>     
     <!-- Link to external JavaScript file -->
     <script src="script.js"></script>
 </body>
