--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
     <div class="credits-container">
         <!-- API Link -->
         <p class="api-link"><a href="https://sunrisesunset.io" target="_blank">Powered by SunriseSunset.io</a></p>
-        <!-- Created by -->
-        <p class="created-by">Created by Dominic Rucker for SES141</p>
+        <!-- Link to GitHub -->
+        <p class="my-code">View the code on <a href="https://github.com/Desrucker/Sunset-Sunrise" target="_blank">GitHub</a></p>
     </div>
     <!-- Link to external JavaScript file -->
     <script src="script.js"></script>
